[package]
name = "stego_rust"
version = "0.1.0"
edition = "2021"
authors = ["Fernando Pérez fernandopaucar149@gmail.com"]
description = "Library for image steganography with AES encryption and SHA-2 hashing"
license = "GPL-3.0"
repository = "https://github.com/fernandopr11/StegoRust"
readme = "README.md"
keywords = ["steganography", "cryptography", "image", "aes", "sha2"]
categories = ["cryptography", "encoding", "multimedia::images"]
homepage = "https://github.com/fernandopr11/StegoRust"
documentation = "https://docs.rs/stego_rust"

[dependencies]
image = "0.24"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.29.0", features = ["bundled"] }
png = "0.17"
